Adding delete functinality for cart using ajax query and js for removing item in the page without refresh

--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -66,4 +66,31 @@
     </div>
 </main>
 
+<script>
+    $(document).on('click','.delete-button',function(e){
+        e.preventDefault();
+        {% comment %} 
+        {% comment %} to remove the product index from page using js {% endcomment %} 
+        var prodid = $(this).data('index');
+
+        $.ajax({
+            type:"POST",
+            url : '{% url "basket:basket_delete" %}',
+            data:{
+                productid: $(this).data('index'),
+                csrfmiddlewaretoken : "{{csrf_token}}",
+                action:'post'
+            },
+            success:function(json){
+                console.log(prodid)
+                $('.product-item[data-index="'+prodid+'"]').remove();
+
+            },
+            error:function(xhr,errmsg,err){
+
+            }
+        })
+    })
+</script>
+
 {% endblock %}
