--- a/templates/account/registration/login.html
+++ b/templates/account/registration/login.html
@@ -52,7 +52,7 @@
                                 </p>
                             </form>
                             <p class="small text-center pt-4">
-                                {% comment %} <a href="{% url "password_reset" %}">Forgotten Password?</a> {% endcomment %}
+                                <a href="{% url "account:pwdreset" %}">Forgotten Password?</a>
                             </p>
                             <p class="small text-center">
                                 {% comment %} <a href="{% url "accounts:register" %}">Help Center?</a> {% endcomment %}
